--- a/app/templates/cart.html
+++ b/app/templates/cart.html
@@ -33,8 +33,8 @@
             <td><img src="{{item.product_image}}" alt="Image Not Found" height="100"></td>
             <td>{{item.seller_name}}</td>
             <td>{{item.quantity}}</td>
-            <td>{{item.unit_price}}</td>
-            <td>{{item.total_price}}</td>
+            <td>${{item.unit_price}}</td>
+            <td>${{item.total_price}}</td>
   
             <td><input type="checkbox" name="move_to_saved" value="{{item.product_id}},{{item.seller_id}},{{item.quantity}},move"></td>
             <td><input style="width:100px" type="number" min="1" max={{item.quantity}} name="{{item.product_id}},{{item.seller_id}},{{item.quantity}},move"></td>
@@ -49,7 +49,7 @@
       </tbody>
     </table>
 
-      <h3>Total Cost: {{total_cost}}</h3>
+      <h3>Total Cost: ${{total_cost}}</h3>
       <input type="submit" name="type" value="Purchase Cart">
       <input type="submit" name="type" value="Move Items to Saved">
       <input type="submit" name="type" value="Update Quantities">
