--- a/app/templates/individualPurchase.html
+++ b/app/templates/individualPurchase.html
@@ -19,16 +19,18 @@
       <tbody>
         {% for entry in purchase_entries%}
           <tr>
-            <th scope="row">{{enty.product_name}}</th>
-            <th scope="row">{{entry.date}}</th>
-            <th scope="row">{{item.status}}</th>
-            <th>
-              <a href="{{ url_for("purchases.individual_purchase", purchase_id=item.purchase_id) }}">
-                <input type="submit" value="More Info" class="btn btn-dark"/>
-              </a> 
-            </th>
+            <th scope="row">{{entry.product_name}}</th>
+            <td><img src="{{entry.product_image}}" alt="Image Not Found" height="100"></td>
+            <td scope="row">{{entry.seller_name}}</th>
+            <td scope="row">{{entry.quantity}}</th>
+            <td scope="row">${{entry.unit_price}}</th>
+            <td scope="row">${{entry.total_price}}</th>
+          </tr>
         {% endfor %}
       </tbody>
   </table>
+
+  <h3>Total Price Paid: ${{price_paid}}</h3>
+
 
 {% endblock %}
