--- a/app/templates/savedForLater.html
+++ b/app/templates/savedForLater.html
@@ -33,8 +33,8 @@
           <td><img src="{{item.product_image}}" alt="Image Not Found" height="100"></td>
           <td>{{item.seller_name}}</td>
           <td>{{item.quantity}}</td>
-          <td>{{item.unit_price}}</td>
-          <td>{{item.total_price}}</td>
+          <td>${{item.unit_price}}</td>
+          <td>${{item.total_price}}</td>
 
           <td><input type="checkbox" name="move_to_cart" value="{{item.product_id}},{{item.seller_id}},{{item.quantity}},move"></td>
           <td><input style="width:100px" type="number" min="1" max={{item.quantity}} name="{{item.product_id}},{{item.seller_id}},{{item.quantity}},move"></td>
