update balance page added

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -23,5 +23,7 @@
         <p>
             {{ user_info.balance }}
         </p>
+    <a class="btn btn-secondary" href="{{ url_for('users.updateProfile') }}" role="button">Update Profile</a>
+
 
 {% endblock %}
