--- a/app/templates/editOrderFulfillment.html
+++ b/app/templates/editOrderFulfillment.html
@@ -57,6 +57,8 @@ role="button">Go Back</a>
 
 <br/>
 <h2>Item Fulfillment Details</h2>
+{{pagination.info}}
+{{pagination.links}}
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
@@ -74,5 +76,6 @@ role="button">Go Back</a>
     {% endfor %}
   </tbody>
 </table>
+{{pagination.links}}
 
 {% endblock %}
