--- a/app/templates/orderFulfillmentDetails.html
+++ b/app/templates/orderFulfillmentDetails.html
@@ -31,6 +31,8 @@ role="button">Go Back</a>
 
 <br/>
 <h2>Order Fulfillment Details</h2>
+{{pagination.info}}
+{{pagination.links}}
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
@@ -57,6 +59,7 @@ role="button">Go Back</a>
     {% endfor %}
   </tbody>
 </table>
+{{pagination.links}}
 
 
 {% endblock %}
