--- a/app/templates/orderFulfillments.html
+++ b/app/templates/orderFulfillments.html
@@ -3,7 +3,23 @@
 {% block content %}
 
 <br><br>
+
+<form action="{{ url_for('orderFulfillments.orderFulfillments') }}" method="post">
+  <select name="search_field">
+    <option value="buyer_name" [selected]="{{search_field}}=='buyer_name'">Buyer Name</option>
+    <option value="a.address">Buyer Address</option>
+    <option value="pr.name">Product Name</option>
+    <option value="pr.description">Product Description</option>
+  </select>
+  contains: 
+  <input type="text" name="search_criteria" value="{{search_criteria}}">
+  <input type="submit" value="Search Fulfillment History">
+</form>
+
+<br/>
 <h2>Order Fulfillment History</h2>
+{{pagination.info}}
+{{pagination.links}}
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
@@ -23,7 +39,7 @@
         <td>{{order.buyer_name}}</td>
         <td>{{order.buyer_address}}</td>
         <td>{{order.quantity}}</td>
-        <td>{{order.date}}</td>
+        <td>{{order.date}})</td>
         <td>{{statuses[order.status]}}</td>
         <th> 
             <a class="btn btn-secondary" href="{{ url_for('orderFulfillments.orderFulfillmentDetails', purchase_id=order.purchase_id) }}" role="button">View / Update</a>
@@ -32,6 +48,7 @@
     {% endfor %}
   </tbody>
 </table>
+{{pagination.links}}
 
 
 {% endblock %}
