Added purchase history, fixed generator

--- a/app/templates/individualPurchase.html
+++ b/app/templates/individualPurchase.html
@@ -30,7 +30,6 @@
       </tbody>
   </table>
 
-  <h3>Total Price Paid: ${{price_paid}}</h3>
-
+  <h3>Total Price Paid: ${{total_price_paid}}</h3>
 
 {% endblock %}
