--- a/app/templates/editInventory.html
+++ b/app/templates/editInventory.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 
+<a class="btn btn-secondary mt-3 mb-3"
+href="{{ url_for('inventories.inventory') }}" 
+role="button">Go Back</a>
+
+<br/>
 <h1>Edit Product Listing</h1>
 
 <form action="" method="post">
