Integrated feedback with product and user account pages

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -23,5 +23,7 @@
         <p>
             {{ user_info.balance }}
         </p>
-
+        <p>
+            <th> <a class="btn btn-secondary" href="{{ url_for('users.userReviews', user_id = user_info.id)}}" role="button">Your Reviews</a></th>
+        </p>
 {% endblock %}
