--- a/app/templates/product.html
+++ b/app/templates/product.html
@@ -39,6 +39,7 @@
             <th scope="col">Seller ID</th>
             <th scope="col">Product ID</th>
             <th scope="col">Description</th>
+            <th scope="col">Reviews</th>
             <th scope="col">Category</th>
             <th scope="col">Price</th>
             <th scope="col">Quantity Available</th>
@@ -54,8 +55,16 @@
                         <th scope="row">{{item.name}}</th>
                         <td><img src="{{item.image}}" alt="User Image Not Found" width="120" height="90"></td>
                         <td>{{item.seller_id}}</td>
+                        <input type="hidden" name="seller_id" value="{{item.seller_id}}" /> 
                         <td>{{item.product_id}}</td>
+                        <input type="hidden" name="product_id" value="{{item.product_id}}" /> 
                         <td>{{item.description}}</td>
+                        <td>
+                            <h> Number of Stars: </h>{{item.num_stars}}
+                            <input type="hidden" name="num_stars" value="{{item.num_stars}}" />
+                            <a class="btn btn-secondary" href="{{ url_for('users.productReviews', sel_id = item["seller_id"], prod_id = item["product_id"])}}" role="button">See Reviews</a>
+                            <a class="btn btn-secondary" href="{{ url_for('users.submitProductReview', sel_id = item["seller_id"], prod_id = item["product_id"])}}" role="button">Submit Product Review</a>
+                        </td>
                         <td>{{item.category}}</td>
                         <td>{{item.price}}</td>
                         <td>{{item.quantity}}</td>
