--- a/app/templates/productSummaryReviews.html
+++ b/app/templates/productSummaryReviews.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <br><br>
-<h2>Summary of Reviews for Product with ID 1</h2>
+<h2>Summary of Reviews</h2>
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
@@ -19,7 +19,7 @@
   </tbody>
 </table>
 
-<h2>Reviews for Product:</h2>
+<h2>Reviews</h2>
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
@@ -36,7 +36,7 @@
       <tr>
         <td>
           {{product_review.upvotes}}
-          <a class="btn btn-secondary" href="{{ url_for('users.upvoteProductReview', id = product_review["buyer_id"], upvotes = product_review["upvotes"])}}" role="button">Upvote</a>
+          <a class="btn btn-secondary" href="{{ url_for('users.upvoteProductReview', buyer_id = product_review["buyer_id"], upvotes = product_review["upvotes"])}}" role="button">Upvote</a>
   
         </td>
         <input type="hidden" name="upvotes" value="{{product_review.upvotes}}" /> 
