--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,11 +4,14 @@
 
 <br><br>
 
-<h2>Products for sale:</h2>
+<h2>Products for sale!</h2>
+
+{{pagination.info}}
+{{pagination.links}}
+
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
-      <th scope="col">Product ID</th>
       <th scope="col">Product Name</th>
       <th scope="col">Category</th>
     </tr>
@@ -16,29 +19,11 @@
   <tbody>
     {% for product in avail_products%}
       <tr>
-        <th scope="row">{{product.product_id}}</th>
         <td>{{product.name}}</td>
         <td>{{product.category}}</td>
       </tr>
     {% endfor %}
   </tbody>
 </table>
-
-<br><br>
-{% if current_user.is_authenticated %}
-<h2>Your recent purchases:</h2>
-<table class='table table-hover table-bordered container'>
-  <thead class="thead-dark">
-    <tr>
-      <th scope="col">Purchase ID</th>
-      <th scope="col">Product Name</th>
-      <th scope="col">Price</th>
-    </tr>
-  </thead>
-
-</table>
-{% else %}
-<p><a href="{{ url_for('users.login') }}">Log in</a> to see your purchase history!</p>
-{% endif %}
 
 {% endblock %}
