--- a/app/templates/individualPurchase.html
+++ b/app/templates/individualPurchase.html
@@ -4,7 +4,7 @@
 
 <h1>Purchase Order # {{purchase_id}}</h1>
 
-<!-- Table to show purchases. -->
+<!-- Table to show an individual order. -->
 <table class='table table-hover table-bordered container'>
     <thead class="thead-dark">
       <tr>
