--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,11 +4,13 @@
 
 <br><br>
 
+
 <h2>Products for sale!</h2>
 
 {{pagination.info}}
 {{pagination.links}}
 
+<!-- Table to all products being sold via pagination. -->
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
