users public view added

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,9 +24,12 @@
       <div style="color: aliceblue; text-align: right; margin-bottom: 25px">
         {% if current_user.is_authenticated %}
           Hello {{current_user.firstname}}! <a href="{{ url_for('users.logout') }}" type="button" class="btn btn-light">Log out</a>
+          <a href="{{ url_for('users.profile') }}" type="button" class="btn btn-light">Your Profile</a>
         {% else %}
           <a href="{{ url_for('users.login') }}" type="button" class="btn btn-light">Log in</a>
         {% endif %}
+        <a href="{{ url_for('users.userPublicView') }}" type="button" class="btn btn-light">Users</a>
+
       </div>
     {% endblock %}
   </div>
