--- a/app/templates/orderFulfillments.html
+++ b/app/templates/orderFulfillments.html
@@ -6,7 +6,7 @@
 
 <form action="{{ url_for('orderFulfillments.orderFulfillments') }}" method="post">
   <select name="search_field">
-    <option value="buyer_name" [selected]="{{search_field}}=='buyer_name'">Buyer Name</option>
+    <option value="buyer_name">Buyer Name</option>
     <option value="a.address">Buyer Address</option>
     <option value="pr.name">Product Name</option>
     <option value="pr.description">Product Description</option>
@@ -39,7 +39,7 @@
         <td>{{order.buyer_name}}</td>
         <td>{{order.buyer_address}}</td>
         <td>{{order.quantity}}</td>
-        <td>{{order.date}})</td>
+        <td>{{order.date}}</td>
         <td>{{statuses[order.status]}}</td>
         <th> 
             <a class="btn btn-secondary" href="{{ url_for('orderFulfillments.orderFulfillmentDetails', purchase_id=order.purchase_id) }}" role="button">View / Update</a>
