--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -25,6 +25,7 @@
         </p>
     <a class="btn btn-secondary" href="{{ url_for('users.updateProfile') }}" role="button">Update Profile</a>
     <a class="btn btn-secondary" href="{{ url_for('users.updatePassword') }}" role="button">Update Password</a>
+    <a class="btn btn-secondary" href="{{ url_for('users.updateBalance') }}" role="button">Update Balance</a>
 
     <h2>Seller Status:</h2>
     {% if seller_status == 0 %}
