--- a/app/templates/balance.html
+++ b/app/templates/balance.html
@@ -6,7 +6,7 @@
 <h2>Enter the number of dollars you want to withdraw or deposit into your account.</h2>
 <h2>Your Current Balance Is:</h2>
 <p>
-  {{ curr_balance }}
+  ${{ curr_balance }}
 </p>
 
 <form action="" method="post" novalidate>
