Saved Updates but load.sql breaks triggers

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -26,4 +26,7 @@
         <p>
             <th> <a class="btn btn-secondary" href="{{ url_for('users.userReviews', user_id = user_info.id)}}" role="button">Your Reviews</a></th>
         </p>
+    <a class="btn btn-secondary" href="{{ url_for('users.updateProfile') }}" role="button">Update Profile</a>
+
+
 {% endblock %}
