--- a/app/templates/balance.html
+++ b/app/templates/balance.html
@@ -2,21 +2,26 @@
 
 {% block content %}
 
-<h1>Login</h1>
+<h1>Update Your Balance</h1>
+<h2>Enter the number of dollars you want to withdraw or deposit into your account.</h2>
+<h2>Your Current Balance Is:</h2>
+<p>
+  {{ curr_balance }}
+</p>
 
 <form action="" method="post" novalidate>
   {{ form.hidden_tag() }}
   <p>
-    {{ form.email.label }}<br/>
-    {{ form.email(size=32) }}<br/>
-    {% for error in form.email.errors %}
+    {{ form.withdraw.label }}<br/>
+    {{ form.withdraw(size=32) }}<br/>
+    {% for error in form.withdraw.errors %}
     <span style="color: red;">[{{ error }}]</span>
     {% endfor %}
   </p>
   <p>
-    {{ form.password.label }}<br/>
-    {{ form.password(size=32) }}<br/>
-    {% for error in form.password.errors %}
+    {{ form.deposit.label }}<br/>
+    {{ form.deposit(size=32) }}<br/>
+    {% for error in form.deposit.errors %}
     <span style="color: red;">[{{ error }}]</span>
     {% endfor %}
   </p>
@@ -32,10 +37,6 @@
     {% endwith %}
   </p>
   {{ form.submit(class_="btn btn-black") }}
-  <a class="btn btn-secondary" href="{{ url_for('users.register') }}" role="button">Register</a>
-  <a class="btn btn-secondary" href="{{ url_for('users.sellerReviews') }}" role="button">Seller Reviews</a>
-  <a class="btn btn-secondary" href="{{ url_for('users.submitSellerReview') }}" role="button">Submit Seller Review</a>
-
 </form>
 
 {% endblock %}
