--- a/app/templates/individualPurchase.html
+++ b/app/templates/individualPurchase.html
@@ -22,7 +22,7 @@
             <th scope="row">{{entry.product_name}}</th>
             <td><img src="{{entry.product_image}}" alt="Image Not Found" height="100"></td>
             <td scope="row">{{entry.seller_name}}
-              <a class="btn btn-secondary" href="{{ url_for('users.submitSellerReview', sel_id = item["seller_id"], prod_id = item["product_id"])}}" role="button">Review Seller</a>
+              <a class="btn btn-secondary" href="{{ url_for('users.submitSellerReview', sel_id = entry.seller_id)}}" role="button">Review Seller</a>
             </th>
             <td scope="row">{{entry.quantity}}</th>
             <td scope="row">${{entry.unit_price}}</th>
@@ -32,7 +32,6 @@
       </tbody>
   </table>
 
-  <h3>Total Price Paid: ${{price_paid}}</h3>
-
+  <h3>Total Price Paid: ${{total_price_paid}}</h3>
 
 {% endblock %}
