--- a/app/templates/inventory.html
+++ b/app/templates/inventory.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <br><br>
-<h2>Product Inventory</h2>
+<h2>My Product Inventory</h2>
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
@@ -23,6 +23,7 @@
         <td>{{product.quantity}}</td>
         <th> 
             <a class="btn btn-secondary" href="{{ url_for('inventories.editInventory', product_id=product.product_id) }}" role="button">Edit</a>
+            <a class="btn btn-secondary" href="{{ url_for('inventories.deleteInventory', product_id=product.product_id) }}" role="button">Delete</a>
         </th>
       </tr>
     {% endfor %}
