--- a/app/templates/productSummaryReviews.html
+++ b/app/templates/productSummaryReviews.html
@@ -36,7 +36,7 @@
       <tr>
         <td>
           {{product_review.upvotes}}
-          <a class="btn btn-secondary" href="{{ url_for('users.upvoteProductReview', buyer_id = product_review["buyer_id"], upvotes = product_review["upvotes"])}}" role="button">Upvote</a>
+          <a class="btn btn-secondary" href="{{ url_for('users.upvoteProductReview', buyer_id = product_review["buyer_id"], prod_id = product_review.product_id, sel_id = product_review.seller_id, upvotes = product_review["upvotes"])}}" role="button">Upvote</a>
   
         </td>
         <input type="hidden" name="upvotes" value="{{product_review.upvotes}}" /> 
