--- a/app/templates/editProduct.html
+++ b/app/templates/editProduct.html
@@ -2,40 +2,45 @@
 
 {% block content %}
 
-    <h1>Add New Product</h1>
-{#    Form to insert all necessary information to add a new product.#}
+    <h1>Edit Product</h1>
+{#    Display current product attributes#}
+    <p> Editing Product with Product ID: {{ current_product.product_id }} </p>
+    <p> Current Product Name: {{ current_product.name }} </p>
+    <p> Current Product Description: {{ current_product.description }} </p>
+    <p> Current Product Image: {{ current_product.image }} </p>
+    <p> Current Product Category: {{ current_product.category }} </p>
+
+
+{#    Form to edit products#}
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
-            {{ form.owner_id.label }}<br/>
-            {{ form.owner_id(size=32) }}<br/>
-            {% for error in form.owner_id.errors %}
-                <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.product_name.label }}<br/>
+            {{ form.product_name.label}}
+            <br/>
             {{ form.product_name(size=32) }}<br/>
             {% for error in form.product_name.errors %}
                 <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
         <p>
-            {{ form.product_description.label }}<br/>
-            {{ form.product_description(size=64) }}<br/>
+            {{ form.product_description.label }}
+            <br/>
+            {{ form.product_description(size=32) }}<br/>
             {% for error in form.product_description.errors %}
                 <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
         <p>
-            {{ form.product_image.label }}<br/>
-            {{ form.product_image(size=64) }}<br/>
+            {{ form.product_image.label }}
+            <br/>
+            {{ form.product_image(size=32) }}<br/>
             {% for error in form.product_image.errors %}
                 <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
         <p>
-            {{ form.product_category.label }}<br/>
+            {{ form.product_category.label }}
+            <br/>
             {{ form.product_category(size=32) }}<br/>
             {% for error in form.product_category.errors %}
                 <span style="color: red;">[{{ error }}]</span>
