--- a/app/templates/productViewCategories.html
+++ b/app/templates/productViewCategories.html
@@ -28,7 +28,7 @@
         <i class="material-icons"></i>
         </input>
     </a>
-    <a href="{{ url_for("productSearchCategory.product", input="wind") }}"><input type="submit" name="Wind" value="Wind" rel="tooltip" class="btn btn-info">
+    <a href="{{ url_for("productSearchCategory.product", input="wind") }}"><input type="submit" name="Wind" value="Wind?  Thanks random data generator." rel="tooltip" class="btn btn-info">
         <i class="material-icons"></i>
         </input>
     </a>
