got rid of wind category and also added home button to the nav

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -24,7 +24,8 @@
       <div style="color: aliceblue; text-align: right; margin-bottom: 25px">
         {% if current_user.is_authenticated %}
           Hello {{current_user.firstname}}!
-          <a href="{{ url_for('users.profile') }}" type="button" class="btn btn-dark">Your Profile</a>
+            <a href="{{ url_for('index.index') }}" type="button" class="btn btn-dark">Home</a>
+            <a href="{{ url_for('users.profile') }}" type="button" class="btn btn-dark">Your Profile</a>
           <a href="{{ url_for('users.userPublicView') }}" type="button" class="btn btn-dark">Users</a>
           <a href="{{ url_for('cart.cart') }}" type="button" class="btn btn-dark">Cart</a>
           <a href="{{ url_for('cart.saved_for_later') }}" type="button" class="btn btn-dark">Saved For Later</a>
