--- a/app/templates/orderFulfillmentDetails.html
+++ b/app/templates/orderFulfillmentDetails.html
@@ -43,7 +43,7 @@ role="button">Go Back</a>
     </tr>
   </thead>
   <tbody>
-    {% set statuses = ['ORDERED', 'SHIPPED', 'DELIVERED'] %}  
+    {% set statuses = ['ORDERED', 'SHIPPED', 'FULFILLED'] %}  
     {% for product in fulfillment %}
       <tr>
         <th scope="row">{{product.product_name}}</th>
