--- a/app/templates/updatePassword.html
+++ b/app/templates/updatePassword.html
@@ -4,7 +4,7 @@
 
 <h1>Update Your Password Here!</h1>
 
-
+<!-- form for updating password -->
 <form action="" method="post">
   {{ form.hidden_tag() }}
   <p>
