--- a/app/templates/updateProfile.html
+++ b/app/templates/updateProfile.html
@@ -9,7 +9,7 @@
 <p>
   Change whichever field you desire, the rest will remain the same
 </p>
-
+<!-- form for updating profile information -->
 <form action="" method="post">
   {{ form.hidden_tag() }}
   <p>
