--- a/app/templates/usersPublic.html
+++ b/app/templates/usersPublic.html
@@ -9,10 +9,12 @@
 <p>You can see each users' name and account number</p>
 <p>For users that also act as sellers, you can also see their email, address, and reviews</p>
 <p></p>
-
+<!-- pagination implemented -->
 {{pagination.info}}
 {{pagination.links}}
 
+<!-- table that shows all the users' public views -->
+<!-- table includes id, name, email (if seller), address (if seller) -->
 <table class='table table-hover table-bordered container'>
   <thead class="thead-dark">
     <tr>
