--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h1>Register</h1>
-
+<!-- form for entering registration information -->
 <form action="" method="post">
   {{ form.hidden_tag() }}
   <p>
