--- a/app/templates/sellerSummaryReviews.html
+++ b/app/templates/sellerSummaryReviews.html
@@ -13,8 +13,8 @@
   </thead>
   <tbody>
       <tr>
-        <th scope="row">{{sellerReviewSummary.count}}</th>
-        <td>{{sellerReviewSummary.average}}</td>
+        <th scope="row">{{count}}</th>
+        <td>{{average_rating}}</td>
       </tr>
   </tbody>
 </table>
