--- a/app/templates/productSummaryReviews.html
+++ b/app/templates/productSummaryReviews.html
@@ -13,8 +13,8 @@
   </thead>
   <tbody>
       <tr>
-        <th scope="row">{{productReviewSummary.count}}</th>
-        <td>{{productReviewSummary.average}}</td>
+        <th scope="row">{{total}}</th>
+        <td>{{average_rating}}</td>
       </tr>
   </tbody>
 </table>
