Fixed seller review count

--- a/app/templates/sellerSummaryReviews.html
+++ b/app/templates/sellerSummaryReviews.html
@@ -13,7 +13,7 @@
   </thead>
   <tbody>
       <tr>
-        <th scope="row">{{count}}</th>
+        <th scope="row">{{total}}</th>
         <td>{{average_rating}}</td>
       </tr>
   </tbody>
